--- a/Design/CategoryWindow.xaml
+++ b/Design/CategoryWindow.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Design"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             DataContext="{StaticResource CategoryVMUC}"
              mc:Ignorable="d" 
              TextElement.Foreground="{DynamicResource MaterialDesignBody}"
              TextElement.FontWeight="Regular"
@@ -28,7 +29,7 @@
                 <DockPanel>
                     <StackPanel Grid.Row="0" Orientation="Horizontal" DockPanel.Dock="Right" >
 
-                        <Button x:Name="btnDelete" Click="BtnDelete_Click" ToolTip="Xóa" Background="LightGreen" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}">
+                        <Button Command="{Binding DeleteCommand}" ToolTip="Xóa" Background="LightGreen" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}">
                             <materialDesign:PackIcon Kind="Delete" />
                         </Button>
                         <!--<ToggleButton x:Name="tgbEdit"
@@ -43,42 +44,28 @@
 
                     </StackPanel>
 
-                    <TextBox x:Name="txtSearch" TextChanged="TxtSearch_TextChanged"
+                    <TextBox Text="{Binding SearchCommand, UpdateSourceTrigger=PropertyChanged}"
                             materialDesign:HintAssist.Hint="Tìm kiếm" Width="200" HorizontalAlignment="Left" Margin="10 0 0 0"
                             Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
 
                 </DockPanel>
-                <DataGrid Grid.Row="1" x:Name="tableDataGrid" Margin="0 8 0 8" SelectionChanged="TableDataGrid_SelectionChanged"
-                    AutoGenerateColumns="True"
-                    CanUserSortColumns="True"
-                         
-                    CanUserAddRows="False"                             
-                    IsReadOnly="True" 
-                         >
-                    <!--<DataGrid.Columns>
-                        <DataGridTextColumn Header="ID" Binding="{Binding ID}"/>
-                        <DataGridTextColumn Header="Name" Binding="{Binding Name}"/>
-                        <DataGridTextColumn Header="Amount" Binding="{Binding Amount}"/>
-                        <DataGridTextColumn Header="Publisher" Binding="{Binding Publisher}"/>
-                        <DataGridTextColumn Header="Category" Binding="{Binding Category}"/>
-                        <DataGridTextColumn Header="PurchaseCost" Binding="{Binding PurchaseCost}"/>
-                        <DataGridTextColumn Header="SaleCost" Binding="{Binding SaleCost}"/>
-                        <DataGridTemplateColumn Header="Dated" IsReadOnly="{Binding ElementName=tBtnEdit, Path=IsChecked}">
-                            <DataGridTemplateColumn.CellTemplate>
-                                <DataTemplate>
-                                    <DatePicker SelectedDate="{Binding Dated}" BorderThickness="0"/>
-                                </DataTemplate>
-                            </DataGridTemplateColumn.CellTemplate>
-                        </DataGridTemplateColumn>
+                <ScrollViewer VerticalScrollBarVisibility="Auto" Grid.Row="1">
+                    <ListView ItemsSource="{Binding ListCategory}" SelectedItem="{Binding SelectedCategory, Mode=OneWayToSource}" Height="410">
+                        <ListView.View>
+                            <GridView>
+                                <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}"></GridViewColumn>
+                                <GridViewColumn Header="Detail" DisplayMemberBinding="{Binding Detail}"></GridViewColumn>
 
-                    </DataGrid.Columns>-->
-                </DataGrid>
+                            </GridView>
+                        </ListView.View>
+                    </ListView>
+                </ScrollViewer>
                 <!--<DataGrid AutoGenerateColumns="True" Name="gvData" SelectionMode="Single" FontSize="11" Padding="5" Background="White" Margin="5"  Grid.Row="1"/>-->
             </Grid>
 
         </materialDesign:Card>
 
-        <materialDesign:Card  Grid.Column="1" Margin="0.6,0,0,0" Height="243">
+        <materialDesign:Card  Grid.Column="1" Margin="0.6,0,0,0" Height="321">
             <StackPanel Margin="5 0 0 0">
 
                 <StackPanel.Resources>
@@ -91,11 +78,20 @@
                 </StackPanel.Resources>
                 <TextBlock Text="Thêm"  Margin="5 0 0 50" HorizontalAlignment="Center"/>
                 <StackPanel Orientation="Horizontal" Style="{StaticResource khoangCach}">
-                    <TextBlock Text="ID:" VerticalAlignment="Center"/>
-                    <TextBox x:Name="txtID" Width="30" materialDesign:HintAssist.Hint="ID" IsEnabled="False"/>
                     <TextBlock Text="Name:" VerticalAlignment="Center"/>
-                    <TextBox x:Name="txtName" Width="138" materialDesign:HintAssist.Hint="Nhập tên danh mục"/>
-
+                    <TextBox Text="{Binding Name, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Width="138" materialDesign:HintAssist.Hint="Nhập tên danh mục"/>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" Style="{StaticResource khoangCach}">
+                    <TextBlock Text="Detail:" VerticalAlignment="Top"/>
+                    <TextBox Text="{Binding Detail, Mode=TwoWay}"
+                        TextWrapping="Wrap"
+                        Width="180"
+                        AcceptsReturn="True"
+                        VerticalScrollBarVisibility="Auto" 
+                        VerticalContentAlignment="Top"  
+                        materialDesign:HintAssist.Hint="Thông tin thêm"
+                        Height="80">
+                    </TextBox>
                 </StackPanel>
 
 
@@ -103,7 +99,7 @@
                 <TextBlock x:Name="tbWarning" Text="*Bạn vui lòng điền đầy đủ thông tin" Foreground="Red" FontWeight="ExtraBold" Visibility="Hidden"/>
 
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0 50 0 50">
-                    <Button x:Name="btnAdd" Width="100" Click="BtnAdd_Click" Content="Add">
+                    <Button Command="{Binding EditCommand}" Width="100" Content="{Binding TextButton, UpdateSourceTrigger=PropertyChanged}">
                         <Button.Style>
                             <Style TargetType="{x:Type Button}" BasedOn="{StaticResource {x:Type Button}}">
                                 <Style.Triggers>
@@ -122,7 +118,7 @@
 
                     </Button>
 
-                    <Button x:Name="btnClear" Content="Clear" Width="100" Margin="30 0 0 0" Click="BtnClear_Click">
+                    <Button Command="{Binding ClearFormCommand}" Content="Clear" Width="100" Margin="30 0 0 0">
                         <Button.Style>
                             <Style TargetType="Button" BasedOn="{StaticResource {x:Type Button}}">
                                 <Style.Triggers>
