--- a/Design/DrawLineChart.xaml
+++ b/Design/DrawLineChart.xaml
@@ -4,8 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Design"
-            mc:Ignorable="d" 
-
+             mc:Ignorable="d" 
+             DataContext="{StaticResource LineVMUC}"
              xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
 
@@ -27,23 +27,23 @@
         </Grid.ColumnDefinitions>
         <DockPanel >
             <TextBlock Margin="0 5 0 0" Text="Biển đồ doanh thu" FontWeight="Bold" HorizontalAlignment="Center" DockPanel.Dock="Top"/>
-            <lvc:CartesianChart Series="{Binding SeriesCollection}" LegendLocation="Right" Zoom="X">
+            <lvc:CartesianChart Series="{Binding PaymentSeriesCollection}" LegendLocation="Right" Zoom="X">
                 <lvc:CartesianChart.AxisX>
-                    <lvc:Axis Title="Game" Labels="{Binding Labels}"></lvc:Axis>
+                    <lvc:Axis Title="Game" Labels="{Binding PaymentLabels}"></lvc:Axis>
                 </lvc:CartesianChart.AxisX>
                 <lvc:CartesianChart.AxisY>
-                    <lvc:Axis Title="Số lượng" LabelFormatter="{Binding Formatter}"></lvc:Axis>
+                    <lvc:Axis Title="Số lượng" LabelFormatter="{Binding PaymentFormatter}"></lvc:Axis>
                 </lvc:CartesianChart.AxisY>
             </lvc:CartesianChart>
         </DockPanel>
         <DockPanel Grid.Column="1" >
             <TextBlock Text="Biển đồ hàng hóa"  Margin="0 5 0 0" FontWeight="Bold" HorizontalAlignment="Center" DockPanel.Dock="Top"/>
-            <lvc:CartesianChart Series="{Binding SeriesCollection1}" LegendLocation="Right" Zoom="X">
+            <lvc:CartesianChart Series="{Binding AmountSeriesCollection}" LegendLocation="Right" Zoom="X">
                 <lvc:CartesianChart.AxisX>
-                    <lvc:Axis Title="Game" Labels="{Binding Labels1}"></lvc:Axis>
+                    <lvc:Axis Title="Game" Labels="{Binding AmountLabels}"></lvc:Axis>
                 </lvc:CartesianChart.AxisX>
                 <lvc:CartesianChart.AxisY>
-                    <lvc:Axis Title="Số lượng" LabelFormatter="{Binding Formatter1}"></lvc:Axis>
+                    <lvc:Axis Title="Số lượng" LabelFormatter="{Binding AmountFormatter}"></lvc:Axis>
                 </lvc:CartesianChart.AxisY>
             </lvc:CartesianChart>
         </DockPanel>
