--- a/Design/DrawPieChart.xaml
+++ b/Design/DrawPieChart.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Design"
              mc:Ignorable="d" 
-
+             DataContext="{StaticResource PieVMUC}"
              xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
 
@@ -27,7 +27,7 @@
         </Grid.ColumnDefinitions>
         <DockPanel >
             <TextBlock Margin="0 5 0 0" Text="Biển đồ doanh thu" FontWeight="Bold" HorizontalAlignment="Center" DockPanel.Dock="Top"/>
-            <lvc:PieChart LegendLocation="Right" DataClick="Chart_OnDataClick" Hoverable="True" DataTooltip="{x:Null}"  Series="{Binding seriesCollection,RelativeSource={RelativeSource AncestorType=UserControl}}" >
+            <lvc:PieChart LegendLocation="Right" Hoverable="True" DataTooltip="{x:Null}"  Series="{Binding PaymentSeriesCollection, RelativeSource={RelativeSource AncestorType=UserControl}}" >
                 <lvc:PieChart.ChartLegend>
                     <lvc:DefaultLegend BulletSize="20"></lvc:DefaultLegend>
                 </lvc:PieChart.ChartLegend>
@@ -35,7 +35,7 @@
         </DockPanel>
         <DockPanel Grid.Column="1" >
             <TextBlock Text="Biển đồ hàng hóa"  Margin="0 5 0 0" FontWeight="Bold" HorizontalAlignment="Center" DockPanel.Dock="Top"/>
-            <lvc:PieChart LegendLocation="Right" Grid.Column="1" Grid.Row="0" DataClick="PieChart_DataClick" Hoverable="True" DataTooltip="{x:Null}"  Series="{Binding seriesCollection1,RelativeSource={RelativeSource AncestorType=UserControl}}" >
+            <lvc:PieChart LegendLocation="Right" Grid.Column="1" Grid.Row="0" Hoverable="True" DataTooltip="{x:Null}"  Series="{Binding AmountSeriesCollection,RelativeSource={RelativeSource AncestorType=UserControl}}" >
             <lvc:PieChart.ChartLegend>
                 <lvc:DefaultLegend BulletSize="20"></lvc:DefaultLegend>
             </lvc:PieChart.ChartLegend>
