--- a/Design/ResourceXAML/MainResource.xaml
+++ b/Design/ResourceXAML/MainResource.xaml
@@ -1,12 +1,13 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:viewmodel="clr-namespace:Design.ViewModel"
-                    xmlns:local="clr-namespace:Design.ResourceXAML">
+                    xmlns:local="clr-namespace:Design.ResourceXAML"
+                    xmlns:viewmodel1="clr-namespace:Design.ViewModel.Statistics">
     <viewmodel:MainViewModel x:Key="MainVM"></viewmodel:MainViewModel>
     <viewmodel:ProductViewModel x:Key="ProductVMUC"></viewmodel:ProductViewModel>
     <viewmodel:CategoryViewModel x:Key="CategoryVMUC"></viewmodel:CategoryViewModel>
     <viewmodel:TransactionViewModel x:Key="TransactionVMUC"></viewmodel:TransactionViewModel>
-
-
-
+    <viewmodel1:ColumnViewModel x:Key="ColumnVMUC"></viewmodel1:ColumnViewModel>
+    <viewmodel1:LineViewModel x:Key="LineVMUC"></viewmodel1:LineViewModel>
+    <viewmodel1:PieViewModel x:Key="PieVMUC"></viewmodel1:PieViewModel>
 </ResourceDictionary>
